[gd_scene load_steps=5 format=3 uid="uid://modal_component"]

[ext_resource type="Script" path="res://nodes/ui/modal/modal.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://nodes/ui/panel/panel_texture.png" id="2_panel_texture"]
[ext_resource type="FontFile" path="res://assets/fonts/alagard.ttf" id="3_font"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1"]

[node name="Modal" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.7)

[node name="ModalContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="NinePatchRect" parent="ModalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_panel_texture")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ModalContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="HBoxContainer" parent="ModalContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ModalContainer/Panel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.686275, 0.439216, 0.443137, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "Modal Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="ModalContainer/Panel/VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.686275, 0.439216, 0.443137, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1")
text = "X"

[node name="HSeparator" type="HSeparator" parent="ModalContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ContentContainer" type="MarginContainer" parent="ModalContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
